[package]
name = "ypass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
overflow-checks = true

[dependencies]
ring = "0.16.20"
hex = "0.3.1"
num-bigint = "0.4.3"
clipboard-ext = "0.2.0"
rpassword = "5.0.1"
